--- a/config/level2.jsonc
+++ b/config/level2.jsonc
@@ -6,7 +6,7 @@
       "width": 1280,
       "height": 720
     },
-    "fullscreen": false
+    "fullscreen": true
   },
   "scene": {
     "renderer": {
@@ -1255,6 +1255,12 @@
           },
           {
             "type": "Rigid Body",
+            "min_x": -0.62389594,
+            "max_x": 0.78031904,
+            "min_y": -0.35712409,
+            "max_y": 0.35712409,
+            "min_z": -0.17916402,
+            "max_z": 0.3341471,
             "bodyType": "cube",
             "static": true,
             "tag": "car"
